# asyncnet

./: .clang-format  .gitignore  CMakeLists.txt  README.md  asyncnet.hpp  main.cpp
asyncnet/: associated_allocator.hpp  associated_executor.hpp  async_completion.hpp  async_result.hpp  defer.hpp  dispatch.hpp  execution_context.hpp  executor.hpp  executor_binder.hpp  executor_work_guard.hpp  io_context.hpp  post.hpp  service.hpp  system_context.hpp  system_executor.hpp  thread_pool.hpp
asyncnet/detail/: call_stack.hpp  config.hpp  event.hpp  global.hpp  handler_base.hpp  intrusive_list.hpp  intrusive_list_iterator.hpp  intrusive_list_node.hpp  key_index.hpp  move_only.hpp  tss_ptr.hpp  wrapped_handler.hpp
asyncnet/detail/impl/: key_index.ipp
asyncnet/impl/: defer.hpp  dispatch.hpp  execution_context.hpp  execution_context.ipp  io_context.hpp  io_context.ipp  post.hpp  src.hpp  system_context.ipp  system_executor.hpp  system_executor.ipp
asyncnet/posix/: descriptor.hpp  reactor.h
asyncnet/posix/impl/: descriptor.hpp  descriptor.ipp
lib/: src.cpp
